added image gems

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+.env*
+CLOUDINARY_URL=cloudinary://852279122284283:7RPLYSJ596acBTcrgSQy_H7a_ko@dzur1urzk
